--- a/package.json
+++ b/package.json
@@ -59,5 +59,9 @@
     "webpack-cli": "^6.0.1",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "mixpanel": "^0.18.1"
   }
 }
